@@ -3,15 +3,25 @@ Hash: SHA256
 
 DIST tinynotify-send-1.2.1.tar.bz2 266078 SHA256 72c5f4451348b0a06dd57efb5de75273e47f7e35ae04df9a3dd1c64be1e71e65 SHA512 f416db09fa95f04d771610af7ae8953192027b8606c53f54efe514c4d33b59e8dc362676004a036c2dd7e7c7cf03b077ee9b753839efbcb181c5724f43efa58d WHIRLPOOL 2e82b67111db19aa52e293feea167e53ef73bf04a043049543082cf9eea64f75bbfe9788e323dd19d081b5cab43ff469e370810fd6bbc70707329cacfb560411
 EBUILD libtinynotify-cli-1.2.1.ebuild 856 SHA256 feb57715b927f16e6594ae9661af1a6279cad82f0856645ad98850c0a10072e2 SHA512 2bc08e33f088af467fc800dffd4c5f0742f0564398fded0189bb16c2fb12096c333eb01736656926bf739e6cc3245fba0b21d87c9c74a5dab2018e452c12850e WHIRLPOOL 24b68fbda7f5c466bcd53339ab93e88029921cc182ad35d53741552a0b0683eec81a9e27284195f31efce852a81783bc6d4b776073882dbe72c2a0dc86057542
-EBUILD libtinynotify-cli-9999.ebuild 1034 SHA256 71104ec51d11b9ff5e508c6f4962bd5fece6827b4584e287ca11f8e0c1e045fe SHA512 0b0c561e2c4358795ad944a34a4efc77f55201ad783ff5d9b00b4980e8407b4c2ed254bc0df83080ea36512a5783f580c074cb252d8de598ba572a16e45861cf WHIRLPOOL 46f7e48f854b0e0d63112ac4b46a8abb0dfd89f62973e2f6a98d6fe2540df34ec0e25d2bee12267f966d7235c86ce39c21a99db3d0dfe8d8329a7fe2ea5aa779
-MISC ChangeLog 1673 SHA256 c11c249667994d347d6f45e34fca3d058cb79fb90cba343055ad6e82852cbc02 SHA512 ec3253aa4635595515d6d836eb27c65890d57a8bbf4cd519b2a58b94921a299fe8f7435ff13e39f2e6652678b70800d2baa285c4bafc3bdd4ef174ccf5201980 WHIRLPOOL a5a406ec9a6f86d3382a9643f32a672a14728350132bb1622885323e2f56e5e7d9878914d95c4e5d54c3c19af295d6d18eca4758686088928fcf3b5c22370691
+EBUILD libtinynotify-cli-9999.ebuild 1038 SHA256 e893b2cb257c6fd11748ff59abfc2da30d461eaab423f110a5ec1d6d1983c1d8 SHA512 e020a0e91b92436fe2c1973ddb08d60fb2b1485aa428d3d4540131c77422c3e1f4d1f9b835204b152b231234774d90023f1c078bf1b8920bec2c4ce1b805f3c6 WHIRLPOOL 1de9de0d597e24c0dc783ad403b41155f38d6b41db11dc2b6d36fb32a2a1d4b6f14568cda581953dc7cbc505df5f3804663f4eb9d2f276dbe1333c7fc2ecfc4a
+MISC ChangeLog 1811 SHA256 b2d3ea064bd2f8eef48eb8c667ab1906838ff4bd8970ab72bd676403c70c46d1 SHA512 14d8798d526b548cffbc5e280d5f5c4816f6459c1e8b3b5abc790280a30522074508b5cc868b2dafc8ff067a8388d3d744871ac001fef591d4ca5bc85fd89e48 WHIRLPOOL a11480d8cb9283206a623d1f3394eec84527a25f543423fcc8c51d5bc1afe2a253079f604c8990b0f1d12d1409b246dc47024f3e155390d2699e26815146abb1
 MISC metadata.xml 446 SHA256 67aa370dc5abd99c8ec781c66239f6678c7d94dcd217968254a9963c9be80820 SHA512 55f8d094df59065c90068f37054ede7db52a8df48b324c085954d56320ba1384d0815997e3c62567f514300c08c7b2509c7c153e69115f6080a8753b3e0e8027 WHIRLPOOL d71ac05b5efe6e7e014daae7f8d596520c24b0ba3c223361e1f28d6d7e47ece7a8479559136f5a664f229508f5685f70bcf27a1529a968a05963944971dd9d00
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iJwEAQEIAAYFAlDMcZ0ACgkQfXuS5UK5QB1E5wP9HDqb3DVHp+3K9lf0n8Udpqd7
-RDmbO5rz/kkIxd79VIihhLIE9QpEPxrHqJRBXscgN40Kw2B0PQfsmVCXfGGaLWfJ
-ECDasEIssBCTuyJFFar7NE/Y8Rx5Fkb9cvieHA9v18JPIybz9VmAVHvF5uYyEYoX
-9z7UDfS1aNkSdRfnAjg=
-=HKKc
+iQJ8BAEBCABmBQJSXpZrXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOi/cP/0XqNT6JmP9f4Jex+LsnqPSJ
+38H8S1KPWS+B5VbuQOkRbUvO+jMqWWIdfj9ybqnWwWeLRILy/isLlOyuxwMs4EYy
+QsxnCy+HUd0Rw3LYLIq7DuAoCywt+ChkQ1ZTm7XaVvkF/hoyu8yfSv1citt0qxGE
+Vwn4bt+eE14B1lizsVuXFaX5bAhz3hmDuwK9XTRwT562a18bj8HmiBPKGz6l8r8o
+ZVxHOZqaG8aufLyoM+LOEHZdYuKYCL381Tk7vxAQV/kZ5zmq6tGmr4R1GXM9NIqB
+yK5cQR5rJsmNBj8lQaHmnxNdaQzmvHPOB7GWmRRxVW3TaFOe6ts033otcDApulyb
+U8dmrTOqpuDomLWXd3J26pvh0NUtSeP4mhdJyc3wiDIujJyKlMmDpZDKVRUgm7ty
+nKAY0ZzuIwjawlclTX+s6MF2+BSw6vyao544Y9U7i7rR09HFfcb+opwrs6wEdvkl
+KGAQYRsNkq8LYkv/X4mHYULP7dFQo/4pd7i9SFu2u4+zp5fLij9VzLF3ajtAd3CN
+wMd8E77kEUGLVnQkfU3rLK4l3OOP5g1S+sIV+2PmfiSDhOX1Kou7AvLFeEN0NGT0
+o4eXepnWJtUw9PKPE1Yr8KqCD8hHJaNyPoe5tBCOiUZKkw0GdbJ2eJAK2N43BMnl
+bu5ooeOOkgd9igCh0kMK
+=rAKj
 -----END PGP SIGNATURE-----
