@@ -5,15 +5,25 @@ DIST libtinynotify-systemwide-0.0.2.tar.bz2 256779 SHA256 7f4fac8333d7e331897738
 DIST libtinynotify-systemwide-0.1.tar.bz2 270071 SHA256 ae2c3bb845eec3eae8921b7887f0cbbc9f468012020c2d6e2c18e30f8d858217 SHA512 95516208485ed46e4702806bca467af509b9756a738f5f345cec712d878f14f4d9c84b78c33f0e4a41e0bf7be3b6e8e50dcd230da753c2827ae75793ca1c74aa WHIRLPOOL 4d40e217ddd44e64e45bcd47f7d0c0f59e7d3c545cd3f921bcec1f2697dd26ce8f2a2633b1382509616cbbb8402f47632b7b205f6820eee86e13002461b51bf9
 EBUILD libtinynotify-systemwide-0.0.2.ebuild 775 SHA256 a1298aa0fcb067335b2f4f5eb303e1b55ccf57e7f678e6258dde2809122841a4 SHA512 49d84ef049cbb6b382adb8d7924a2969598e07fb51120ca171171326fecc3deaab90fa7d1c939c8865126421596ddc3459b0bb04423deb0c3fdc943eafdf59cb WHIRLPOOL b2244739c958a2f52ffe7905b0db5add5c8f157692a8405af0a0622ca6c037e2a5236b1bb4620ac88f1ba4896a8954a6d73f7cf1045a829569f4d56b25f20177
 EBUILD libtinynotify-systemwide-0.1.ebuild 772 SHA256 c4fbd25ef7497aa36f426b15f15d195e064678c4b05ae4dda17cfcffa9b93c37 SHA512 358193adffc6bf5f6d03d62668f0d24fff99cadb5f562817e725495cc1a140d28676c1c845ca57b0ddf2450a0bec83280395e0793fde55692519df7033a87d28 WHIRLPOOL ef6d10f8c24d1dfe33312229044438149fa228e7dc0f1f1186cb639cb7ff5c24f8564e8755b3ae73f57d106c49d7e4a1fba962b40a135b69020246dbcfebf4a4
-EBUILD libtinynotify-systemwide-9999.ebuild 964 SHA256 11a280f92ba5b65550423994a8e170fcecb9aae203f844940c04fd7297315623 SHA512 4d13c8c238852f5a887ffe9cf78298e74936c680c7e4254c86d83ef821b6751680b613a7f478c38c6582f8ceec8a13424460e3973d6e52d023602cbcbc83dda8 WHIRLPOOL ad411d4e100c501b27a7644bb775c86ef6f3d1f3b63645332d14f1cdcc210a98c5bdcc0dd0a1f2cc4dcc76498bb889492992963abaa79ddb55cfa7d5225854e6
-MISC ChangeLog 1318 SHA256 da2944f9e4c6cbb34017b4ea4e767b79aa0443d58fd8f8df23be6fce80bdd185 SHA512 cf1101722ab1d04a87f12bb6b275c5279cf069ff6b99a4fb97081a4780e6eb244f9c0f6f86c55b65f136c1ac8edd73aaace2cacea2aa3f5bda051cb6afd24d92 WHIRLPOOL 54bd613697cbfc6284923edc2df4909a615f8c0d03f5da67cbc9bcc9e07ae1c22ed5b94072beac0dfd332fa6737b4fc0b5c7dfa76083fefdd24ee16c1d03d17e
+EBUILD libtinynotify-systemwide-9999.ebuild 971 SHA256 83491c3f237ab33c7fda0cd1c759ed9d6ef191b190b6716bc0218718f6cbe128 SHA512 5d37006636a5ec896e47fd0a715c6d6119b4c478d372899b1ad3d3bf6c06f3897feb0fa42669906a52137a9823b378e4e732d195b63d2fe89f08698aa8c713ca WHIRLPOOL 11d94b337e03b69764f1ce5f97adf2d5f0a37de520fe2154758a86c4ff1ea2e722b9adb8fa91744f3b49291ec80c0fd818a597da74ff055ed94e8369f674c966
+MISC ChangeLog 1465 SHA256 1fd4f3742a2cf34723c0ec49df237264e72d7b1ad6b317ee2914484c830bc91b SHA512 1c62cc73102b08a627064c05a0290219a7d536ff9a69a18e13ce8ccd2296d8f56981141cd0553fbcf84aa586dd0a6f2b3435f7a7ce6f2cb5bc072c9eacb05908 WHIRLPOOL b2539038d331d6d872b0b25bb4be617140e35c35af1b9f5609a77e42d58943cece9ed4162f80ad738b816fc577f416cc30db86bb8ae552fd3b1e510bd204c7e1
 MISC metadata.xml 455 SHA256 8984bccd8888aca882db3cc86ed2bf41f87c41e628adeef1e340494f8b51758d SHA512 59c65d70cef2fb2fa2ddbe1c998e555346bfdcf11d9e6105d26c5c0645a51bc985287c265b199b7f233021cabcff471e02e6859d4c98944292371c7b2f0df369 WHIRLPOOL 96210ae6651a34454590885b44936742f99149b67316a3be775bac9673ca3f785e0e360532e2164a3b730a9296573385ef2794a33d09ab7da02fef3be5be8f07
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iJwEAQEIAAYFAlDMcYgACgkQfXuS5UK5QB0a3QQAjnxMZ6dKmxG3HZrDLyScu0HG
-g2e8vN2a0Y2w/J/wrdr+5jjd7/8veEpS8pSzQKsB8T1yCUK26xesBAJwkAH7nHoW
-kEckXOQQZyCvLS1rEsBMAHpzZh+2TCAyifKsuMMv39OMOib+VBvET0w+cUBoyRRo
-xFfa0n8ga0E/uvUul6k=
-=neqb
+iQJ8BAEBCABmBQJSXpWZXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOfWgP/3q5f1w1FWWC+tH7SDOPoEau
+9/r4UJBYYgaUE0ZpKUNAxxSbgjuapX2X1rAC8uZkDHEVJwUcppbc21tccJR/1vhy
+51UG7hY61eCKoH1xDTyqHDgY+rbcFS5VYQYG16zbaAERr5DqI4IJOvewaVKxYL7V
+2SoYPUgN1i9n8aF79c4B3gms6WGoyKtIkP+bPM0CJJDQDD4UF61JgE/9816oAYvd
+Y7RqL5cH13Q2jaK0LEYyzfSTJTPuwQUTVQJ25KnlK8Hm4ZWb431NMrLzZ1lbslFV
+yR4iWc06WIMe/MaUN2L+TQTRXnLjg4qK7bXTKAbOLPl/iDSRMQ1RgSLhOSpyewnI
+ah00RnsPCqp3qj6Q8RprFcIR3Dl+mgnYUzOKeFotjvN23e0j66s8wDc30J5l/+/w
+oTPBRamtxfHQo61U/V0j8rVX9as0+uQ9wpDykcqpKOX6yFJTGRcRyAyFMNLDlaWb
+nwxPydPgRpGbKmRoGAAW6FnUTjw4MpoYC+V07w9rjEi2uNcbXfnGBJ0jQHh9R7sg
+Wtdgt7hItweJiVwXeVDniQgg9kEmbx1bw2lAfLOglyTm2DpzxixS743EBQrOpNJN
+dP+fc0LxbktXOfy3qfo5TPbdl7AL7GoCovM4jUYNXaLGssO8C7OCdISGdXdXvZBC
+yvUI4UHd4CqFE2lHGgkV
+=PhfG
 -----END PGP SIGNATURE-----
