@@ -1,14 +1,14 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libtinynotify-systemwide/libtinynotify-systemwide-9999.ebuild,v 1.1 2012/12/15 12:47:49 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libtinynotify-systemwide/libtinynotify-systemwide-9999.ebuild,v 1.2 2013/10/16 13:33:01 mgorny Exp $
 
-EAPI=4
+EAPI=5
 
 #if LIVE
 AUTOTOOLS_AUTORECONF=yes
 EGIT_REPO_URI="http://bitbucket.org/mgorny/${PN}.git"
 
-inherit git-2
+inherit git-r3
 #endif
 
 inherit autotools-utils
@@ -22,8 +22,8 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="doc static-libs"
 
-RDEPEND="sys-process/procps
-	x11-libs/libtinynotify"
+RDEPEND="sys-process/procps:0=
+	x11-libs/libtinynotify:0="
 DEPEND="${RDEPEND}
 	virtual/pkgconfig
 	doc? ( dev-util/gtk-doc )"
