@@ -3,15 +3,25 @@ Hash: SHA256
 
 DIST libtinynotify-0.2.1.tar.bz2 286167 SHA256 2fee7d2f1bb17f1a5c499d32490ded06c1fd9e4300d0edf1b65615c5914dd07b SHA512 4d1d4eb56a654aef523aa5a81cafd51b64f7bf44130f3043d5d6b6ea88fbc7681d96cbde3c16cd00eb141145cb551018129f4bab03f542bf88425beda41cdca3 WHIRLPOOL 6a507e95b8dd9f7884f55f000ef2d76102f5b28b99bfc15f15466487229204b685099a7e6edeb3be1c07203d9f2dc3a3a666e92a22d16d1dc709727aa29d102b
 EBUILD libtinynotify-0.2.1.ebuild 753 SHA256 4c8a206ca868609d465fa95a14fe77b7a89432ec5051b830669c94417f34a7fc SHA512 9c30b0407f6255e7d657e5d7570df7d0a509061f487ab1cc3858a96350ce1b027a18b31a9cc419bc14f55ef82428a226f8672cdecf939941a5c67e0cdcc412cd WHIRLPOOL 71cb454e4437abe7c8584a4593b887291bdd5a831cade38b9916f02e113250f3f13abf91b28655d5ab2038f6d2536797ea62e79dc1ab11cc44609f76ca0b5ac9
-EBUILD libtinynotify-9999.ebuild 942 SHA256 7f18a927949239099debde37d3f9a94d33e4ad157a08996a46adad64b8d61192 SHA512 b7ac8138354926ddbc3705572be8b0003c9542917ba97ad65fa3cffc6dc7323350a92d39b0612154b9481fc8fa95f7ba1edf246a7e8ba8a40f1fe001a0fb5389 WHIRLPOOL 541e0cd31087c2611da09641ee45fdc2bac0bf2fe13e40aeebe9f963e0a3ee354bc8feb4fcb57968e9a03a8846d35c95ac0fdfb2e87b7f24a02d4ec3044598a9
-MISC ChangeLog 1741 SHA256 af266d2cf4f2aa503b6f07baa93e0acd6983aae19cb975cc086bae306bf01a19 SHA512 212dcedd931d84b4a5fdd72e35ca82b4606313c35aa5541d28eca43225d3b31c00867f26974ae029a0bfccb4571369b4d571373562a74cd5d2206befd90cd7d2 WHIRLPOOL b7bc935cd9a01031de4fea3f683a2a6bf40d0d6307afec89bf01ceef7374ce002354ab59d476d1f6b03832d81d594250823a934f2ed9c060a415115d3b19e4c8
+EBUILD libtinynotify-9999.ebuild 946 SHA256 6f332d08745f95f9da50c8ea4625cdf53055f7464992d3387be179d2fee59008 SHA512 944c1ef7eb355f90e5ecbba7517f7ed5c122ef70915dd6e717d5e3bf75e2c2fe208c08d08bb38c370dff7ba08f964660c25815c17a1bd8c8c33939e2a693a7b7 WHIRLPOOL 46fde5945bece53f101fa0ac74767c9f0cc20b5806d78ef6c1deb635c4d340fc0ce6fa7fcccf6b60cecece01d079b32877607b885e11d51d42b2c3b2382704f1
+MISC ChangeLog 1875 SHA256 91731ee28f19f5b1e1f8629535aaf0ed57dfcc6aec0b547500ae238e65121643 SHA512 d0e972b5c3c19e051432d9691ceac99f624d83049c357dd8e21733a78c1b8b909f6c7e6d4597f7c3131fdd999e676cc4b742ad848aad9ac22346c72a227c6df1 WHIRLPOOL 653bd603f8dcd3af8d5d610c6bc88f93415c14a7b590721ff7bb14a565a1de98e286fb1e65160a15424b841cdec555e9d2d075e185d27892fe2921b53ea9e8ef
 MISC metadata.xml 444 SHA256 1c35746db4d05b0e2797357dc41c4cb2f254d46325a8f0a5a70ad6a2ac8dc0ab SHA512 d9630df3c432609eb601ea11250aea5378712b617c31f499f727abe0a8566341d5893824f8857f545c5dad72c9e5c728985eca4477f53ac1bc650a7ac36c55db WHIRLPOOL e780dc9691a0ac63642f8f75e6a8a54926e875e9ef0668091f1d0f2f8bafcea797914e246086ae098e4e6e199e797fdec14894a0c5625021c02dbfba48489191
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iJwEAQEIAAYFAlDMcZAACgkQfXuS5UK5QB134gQAk7HPhC2P5gujUHwIUigrv+vw
-al2vaVgc8BU27Wrn/VNAHeFMsAQfIuFsLrFnjCTwqLhXfLoAM1mfedUGVIWZgT2p
-mjRhSPUrfEYjjJjuWQAvYnKdZU602Z8pjvGuixppN0Qv5afurmjQoCMNFWaLj0+J
-p2YEW5EVSHh2TgWPOAA=
-=BRMF
+iQJ8BAEBCABmBQJSXpS2XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOti8P/i9d7xG3fOPqgWm5tkGCtW6w
+NM5xbYUm1ytTIttkR2jSuYVJVUp0p/JJE+wBfvO7s/34aGuXCYUUU7Igzo9WM3jj
+2/k7omPum1V8DHiTYY6j4AFJx1tfO8vGN7R1GE+DQu11X/T05+nBvlt85WCPQO73
+eVSHCRI4YymCtsQGIGn2hazyPSjnbsHDqzWphoMA6lhQHVuXiKZHnOhbTuBanJ0o
+aE0h8d+tD99i3TWQsw8NnvBJNc+fghhDiG/eYd0blBgNN3nTkHJsdLQjESsIllcN
+MuJKasTrzs/FUscRwCgHbYFR3j3iuu/snZG1sf5dJcX06epXthgfcRvJqX7GeVb7
+amvYGxeqniLBFbWlcre5Nsmg0pAMZ3rx3U+7u6y0c8xWAwPKVRYYGZSY7f+Y93sL
+RTCD3YkMX87s8dCLI8/eqXoiuhclGSskHMX8YwA3mS12WmZ4/SiOPJXQd9ieb1Hv
+pLHbOy0zTWrNLPiBIsyDyd94NCvBgN6ePwkwuKdOcohCywxrMKl7pT9Aeo6I/nYl
+ryFWh63iCMUTZ/Pq3JEA6BK+yHs9RzbDF4WCtKZVoje8TetuccmTx1NTNIzB+gZh
+qdQNvB4pB8nL5rV520Z1WFbFjfXRnqb+7YZbNef1SaIJ2V3CBtzupU5qGAh1j5zu
+d6tRA+5zeGaBRB7J7HaD
+=gAY6
 -----END PGP SIGNATURE-----
