@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/libtinynotify-systemwide
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libtinynotify-systemwide/ChangeLog,v 1.6 2012/12/15 12:47:49 mgorny Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libtinynotify-systemwide/ChangeLog,v 1.7 2013/10/16 13:33:01 mgorny Exp $
+
+  16 Oct 2013; Michał Górny <mgorny@gentoo.org>
+  libtinynotify-systemwide-9999.ebuild:
+  Switch to git-r3. Add SLOT operators to dependencies.
 
 *libtinynotify-systemwide-9999 (15 Dec 2012)
 
