@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libtinynotify-cli
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libtinynotify-cli/ChangeLog,v 1.7 2012/12/15 12:48:10 mgorny Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libtinynotify-cli/ChangeLog,v 1.8 2013/10/16 13:36:32 mgorny Exp $
+
+  16 Oct 2013; Michał Górny <mgorny@gentoo.org> libtinynotify-cli-9999.ebuild:
+  Switch to git-r3. Add SLOT operators to dependencies.
 
 *libtinynotify-cli-9999 (15 Dec 2012)
 
